Fixed External Cryo Pods not affecting max crew value

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,9 @@
           "path":"C:\\Program Files\\Java\\jdk1.7.0_80",
           "default":true
         }
-    ]
+    ],
+    "java.format.settings.url": ".vscode/java-formatter.xml",
+    "[java]": {
+        "editor.detectIndentation": false
+    },
 }
