--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ hs_err_pid*
 !.vscode/launch.json
 !.vscode/extensions.json
 !.vscode/java-formatter.xml
+!.vscode/forum-post.txt
 !.vscode/*.code-snippets
 
 # Local History for Visual Studio Code
