Add lunalib integration

--- a/data/config/hullmod_stats.ini
+++ b/data/config/hullmod_stats.ini
@@ -1,135 +1,135 @@
 {
   "ash_advance_radar_systems": {
-    "sight_radius_mult": 0.25,                      # Default: 0.25
-    "weapon_range_mult": 0.05                       # Default: 0.05
+    "ash_advance_radar_systems_stat1": 0.25,                # Sight Radius Multiplier Default: 0.25
+    "ash_advance_radar_systems_stat2": 0.05                 # Weapon Range Multiplier Default: 0.05
   },
   "ash_automated_racks": {
-    "missile_fire_rate_mult": 0.20,                 # Default: 0.20
-    "missile_ammo_mult": 0.10,                      # Default: 0.10
-    "missile_turn_rate_mult": 0.10                  # Default: 0.10
+    "ash_automated_racks_stat1": 0.20,                      # Missile Fire Rate Multiplier Default: 0.20
+    "ash_automated_racks_stat2": 0.10,                      # Missile Ammo Multiplier Default: 0.10
+    "ash_automated_racks_stat3": 0.10                       # Missile Turn Rate Multiplier Default: 0.10
   },
   "ash_beam_combiners": {
-    "beam_damage_mult": 0.20,                       # Default: 0.20
-    "beam_flux_cost_mult": 0.20                     # Default: 0.20
+    "ash_beam_combiners_stat1": 0.20,                       # Beam Damage Multiplier Default: 0.20
+    "ash_beam_combiners_stat2": 0.20                        # Beam Flux Cost Multiplier Default: 0.20
   },
   "ash_circuit_breakers": {
-    "overload_time_mult": 0.33,                     # Default: 0.33
-    "emp_damage_taken_mult": 0.50                   # Default: 0.50
+    "ash_circuit_breakers_stat1": 0.33,                     # Overload Duration Multiplier Default: 0.33
+    "ash_circuit_breakers_stat2": 0.50                      # EMP Damage Taken Multiplier Default: 0.50
   },
   "ash_convicted_crewmates": {
-    "frigate_ppt_mult": 2,                          # Default: 2
-    "destroyer_ppt_mult": 1.5,                      # Default: 1.5
-    "max_cr_mod": 0.15,                             # Default: 0.15
-    "kill_timer": 30,                               # Default: 30
-    "ppt_gain": [5,10,15,25]                        # Default: [5,10,15,25]
+    "ash_convicted_crewmates_stat1": 2,                     # Frigate PPT Multiplier Default: 2
+    "ash_convicted_crewmates_stat2": 1.5,                   # Destroyer PPT Multiplier Default: 1.5
+    "ash_convicted_crewmates_stat3": 0.15,                  # Max Combat Readiness Modifier Default: 0.15
+    "ash_convicted_crewmates_stat4": 30,                    # Kill Timer Default: 30
+    "ash_convicted_crewmates_stat5": [5,10,15,25]           # PPT Gain Default: [5,10,15,25]
   },
   "ash_external_cargo_holds": {
-    "flux_dissipation_mult": 0.10,                  # Default: 0.10
-    "sensor_profile_mult": 0.10,                    # Default: 0.10
-    "armor_damage_taken_mult": 0.10,                # Default: 0.10
-    "cargo_mod": [60,120,180,300]                   # Default: [60,120,180,300]
+    "ash_external_cargo_holds_stat1": 0.10,                 # Flux Dissipation Multiplier Default: 0.10
+    "ash_external_cargo_holds_stat2": 0.10,                 # Sensor Profile Multiplier Default: 0.10
+    "ash_external_cargo_holds_stat3": 0.10,                 # Armor Damage Taken Multiplier Default: 0.10
+    "ash_external_cargo_holds_stat4": [60,120,180,300]      # Cargo Capacity Modifier Default: [60,120,180,300]
   },
   "ash_external_cryo_pods": {
-    "flux_dissipation_mult": 0.10,                  # Default: 0.10
-    "sensor_profile_mult": 0.10,                    # Default: 0.10
-    "crew_lost_mult": 0.10,                         # Default: 0.10
-    "crew_mod": [60,120,180,300]                    # Default: [60,120,180,300]
+    "ash_external_cryo_pods_stat1": 0.10,                   # Flux Dissipation Multiplier Default: 0.10
+    "ash_external_cryo_pods_stat2": 0.10,                   # Sensor Profile Multiplier Default: 0.10
+    "ash_external_cryo_pods_stat3": 0.10,                   # Crew Lost Multiplier Default: 0.10
+    "ash_external_cryo_pods_stat4": [60,120,180,300]        # Crew Capacity Modifier Default: [60,120,180,300]
   },
   "ash_external_fuel_tanks": {
-    "flux_dissipation_mult": 0.10,                  # Default: 0.10
-    "sensor_profile_mult": 0.10,                    # Default: 0.10
-    "high_explosive_damage_taken_mult": 0.10,       # Default: 0.10
-    "fuel_mod": [60,120,180,300]                    # Default: [60,120,180,300]
+    "ash_external_fuel_tanks_stat1": 0.10,                  # Flux Dissipation Multiplier Default: 0.10
+    "ash_external_fuel_tanks_stat2": 0.10,                  # Sensor Profile Multiplier Default: 0.10
+    "ash_external_fuel_tanks_stat3": 0.10,                  # High Explosive Damage Taken Multiplier Default: 0.10
+    "ash_external_fuel_tanks_stat4": [60,120,180,300]       # Fuel Capacity Modifier Default: [60,120,180,300]
   },
   "ash_fighter_targeting_uplink": {
-    "fighter_damage_mult": 0.20,                    # Default: 0.20
-    "min_effective_range": 760,                     # Default: 760
-    "max_effective_range": 560                      # Default: 560
+    "ash_fighter_targeting_uplink_stat1": 0.20,             # Fighter Damage Multiplier Default: 0.20
+    "ash_fighter_targeting_uplink_stat2": 760,              # Minimum Effect Range Default: 760
+    "ash_fighter_targeting_uplink_stat3": 560               # Maximum Effect Range Default: 560
   },
   "ash_flux_amplifiers": {
-    "weapon_damage_mult": 0.20,                     # Default: 0.20
-    "weapon_flux_mult": 0.10,                       # Default: 0.10
-    "weapon_fire_rate_mult": 0.10                   # Default: 0.10
+    "ash_flux_amplifiers_stat1": 0.20,                      # Weapon Damage Multiplier Default: 0.20
+    "ash_flux_amplifiers_stat2": 0.10,                      # Weapon Flux Cost Multiplier Default: 0.10
+    "ash_flux_amplifiers_stat3": 0.10                       # Weapon Fire Rate Multiplier Default: 0.10
   },
   "ash_flux_limiters": {
-    "weapon_flux_mult": 0.20,                       # Default: 0.20
-    "weapon_damage_mult": 0.10,                     # Default: 0.10
-    "weapon_fire_rate_mult": 0.10                   # Default: 0.10
+    "ash_flux_limiters_stat1": 0.20,                        # Weapon Flux Cost Multiplier Default: 0.20
+    "ash_flux_limiters_stat2": 0.10,                        # Weapon Damage Multiplier Default: 0.10
+    "ash_flux_limiters_stat3": 0.10                         # Weapon Fire Rate Multiplier Default: 0.10
   },
   "ash_front_loaded_armor": {
-    "positive_armor_value_mult": 2,                 # Default: 2
-    "negative_armor_value_mult": 0.5                # Default: 0.5
+    "ash_front_loaded_armor_stat1": 2,                      # Front Armor Value Multiplier Default: 2
+    "ash_front_loaded_armor_stat2": 0.5                     # Back Armor Value Multiplier Default: 0.5
   },
   "ash_fuel_ramscoop": {
-    "days_to_generate_fuel": 3,                     # Default: 3
-    "fuel_to_generate": [1,2,3,4],                  # Default: [1,2,3,4]
-    "smod_fuel_to_generate": [2,3,5,6]              # Default: [2,3,5,6]
+    "ash_fuel_ramscoop_stat1": 3,                           # Days to Generate Fuel Default: 3
+    "ash_fuel_ramscoop_stat2": [1,2,3,4],                   # Fuel to Generate Default: [1,2,3,4]
+    "ash_fuel_ramscoop_stat3": [2,3,5,6]                    # S-mod Fuel to Generate Default: [2,3,5,6]
   },
   "ash_graviton_attunement_drive": {
-    "supplies_per_month_mult": 2,                   # Default: 2
-    "sensor_profile_mult": 3,                       # Default: 3
-    "fleet_burn_mod": [1,2,3,4]                     # Default: [1,2,3,4]
+    "ash_graviton_attunement_drive_stat1": 2,               # Supplies Per Month Multiplier Default: 2
+    "ash_graviton_attunement_drive_stat2": 3,               # Sensor Profile Multiplier Default: 3
+    "ash_graviton_attunement_drive_stat3": [1,2,3,4]        # Fleet Burn Modifier Default: [1,2,3,4]
   },
   "ash_industrial_machine_forge": {
-    "days_to_generate_heavy_machinery": 3,          # Default: 3
-    "heavy_machinery_to_generate": [5,15,30,50],    # Default: [5,15,30,50]
-    "metals_to_consume": [35,105,210,350]           # Default: [35,105,210,350]
+    "ash_industrial_machine_forge_stat1": 3,                # Days to Generate Heavy Machinery Default: 3
+    "ash_industrial_machine_forge_stat2": [5,15,30,50],     # Heavy Machinery to Generate Default: [5,15,30,50]
+    "ash_industrial_machine_forge_stat3": [35,105,210,350]  # Metals to Consume Default: [35,105,210,350]
   },
   "ash_invasion_package": {
-    "casualties_mult": [0.02,0.04,0.06,0.10],       # Default: [0.02,0.04,0.06,0.10]
-    "operations_mult": [0.02,0.04,0.06,0.10],       # Default: [0.02,0.04,0.06,0.10]
-    "cargo_capacity_mult": 0.40                     # Default: 0.40
+    "ash_invasion_package_stat1": [0.02,0.04,0.06,0.10],    # Planetary Operations Marine Casualties Multiplier Default: [0.02,0.04,0.06,0.10]
+    "ash_invasion_package_stat2": [0.02,0.04,0.06,0.10],    # Planetary Operations Multiplier Default: [0.02,0.04,0.06,0.10]
+    "ash_invasion_package_stat3": 0.40                      # Cargo Capacity Multiplier Default: 0.40
   },
   "ash_makeshift_missile_autoforge": {
-    "missile_ammo_reload_size_mod": 10,             # Default: 10
-    "missile_ammo_per_second_mod": 50               # Default: 50
+    "ash_makeshift_missile_autoforge_stat1": 10,            # Missile Ammo Reload Size Modifier Default: 10
+    "ash_makeshift_missile_autoforge_stat2": 50             # Missile Reload Per Second Modifier Default: 50
   },
   "ash_marine_training_facility": {
-    "days_to_generate_marines": 7,                  # Default: 7
-    "marines_to_generate": [10,20,30,50],           # Default: [10,20,30,50]
-    "marines_to_level": [2,4,6,10],                 # Default: [2,4,6,10]
-    "smod_marines_to_level": [3,6,9,15],            # Default: [3,6,9,15]
-    "max_marines_to_generate": [50,100,150,250]     # Default: [50,100,150,250]
+    "ash_marine_training_facility_stat1": 7,                # Days to Generate Marines Default: 7
+    "ash_marine_training_facility_stat2": [10,20,30,50],    # Marines to Generate Default: [10,20,30,50]
+    "ash_marine_training_facility_stat3": [2,4,6,10],       # Marines to Level Default: [2,4,6,10]
+    "ash_marine_training_facility_stat4": [3,6,9,15],       # S-mod Marines to Level Default: [3,6,9,15]
+    "ash_marine_training_facility_stat5": [50,100,150,250]  # Max Marines to Generate Default: [50,100,150,250]
   },
   "ash_mineral_refinery": {
-    "days_to_generate_alloys": 3,                   # Default: 3
-    "alloys_to_generate": [80,160,240,400],         # Default: [80,160,240,400]
-    "minerals_to_consume": [400,800,1200,2000]      # Default: [400,800,1200,2000]
+    "ash_mineral_refinery_stat1": 3,                        # Days to Generate Metals/Rare Metals Default: 3
+    "ash_mineral_refinery_stat2": [80,160,240,400],         # Metals/Rare Metals to Generate Default: [80,160,240,400]
+    "ash_mineral_refinery_stat3": [400,800,1200,2000]       # Ore/Rare Ore to Consume Default: [400,800,1200,2000]
   },
   "ash_missile_bay": {
-    "missile_ammo_mult": 0.60,                      # Default: 0.60
-    "fighter_bay_mod": 1,                           # Default: 1
-    "deployment_points_mod": [1,1,2,2]              # Default: [1,1,2,2]
+    "ash_missile_bay_stat1": 0.60,                          # Missile Ammo Multiplier Default: 0.60
+    "ash_missile_bay_stat2": 1,                             # Fighter Bay Modifier Default: 1
+    "ash_missile_bay_stat3": [1,1,2,2]                      # Deployment Points Modifier Default: [1,1,2,2]
   },
   "ash_reactive_subsystems": {
-    "max_cr_mod": 0.15,                             # Default: 0.15
-    "deployment_points_mod": [1,2,3,5]              # Default: [1,2,3,5]
+    "ash_reactive_subsystems_stat1": 0.15,                  # Max Combat Readiness Modifier Default: 0.15
+    "ash_reactive_subsystems_stat2": [1,2,3,5]              # Deployment Points Modifier Default: [1,2,3,5]
   },
   "ash_reactor_bay": {
-    "flux_dissipation_mult": 0.10,                  # Default: 0.10
-    "flux_capacity_mult": 0.10,                     # Default: 0.10
-    "fighter_bay_mod": 1,                           # Default: 1
-    "deployment_points_mod": [1,1,2,2]              # Default: [1,1,2,2]
+    "ash_reactor_bay_stat1": 0.10,                          # Flux Dissipation Multiplier Default: 0.10
+    "ash_reactor_bay_stat2": 0.10,                          # Flux Capacity Multiplier Default: 0.10
+    "ash_reactor_bay_stat3": 1,                             # Fighter Bay Modifier Default: 1
+    "ash_reactor_bay_stat4": [1,1,2,2]                      # Deployment Points Modifier Default: [1,1,2,2]
   },
   "ash_swift_retreat_protocol": {
-    "fighter_movement_mult": 0.25,                  # Default: 0.25
-    "fighter_engine_damage_taken_mult": 0.25        # Default: 0.25
+    "ash_swift_retreat_protocol_stat1": 0.25,               # Fighter Movement Multiplier Default: 0.25
+    "ash_swift_retreat_protocol_stat2": 0.25                # Fighter Engine Damage Taken Multiplier Default: 0.25
   },
   "ash_targeting_transceiver": {
-    "weapon_range_mod": 0.10,                       # Default: 0.10
-    "autofire_accuracy_mod": 0.40,                   # Default: 0.40
-    "min_effective_range": 760,                     # Default: 760
-    "max_effective_range": 560                      # Default: 560
+    "ash_targeting_transceiver_stat1": 0.10,                # Frigate/Destroyer Weapon Range Multiplier Default: 0.10
+    "ash_targeting_transceiver_stat2": 0.40,                # Cruiser/Capital Autofire Accuracy Multiplier Default: 0.40
+    "ash_targeting_transceiver_stat3": 760,                 # Minimum Effect Range Default: 760
+    "ash_targeting_transceiver_stat4": 560                  # Maximum Effect Range Default: 560
   },
   "ash_temporal_flux_reactor": {
-    "time_flow_mult": 0.33                          # Default: 0.33
+    "ash_temporal_flux_reactor_stat1": 0.33                 # Timeflow Multiplier Default: 0.33
   },
   "ash_venting_overdrive": {
-    "ship_movement_mult": 1                         # Default: 1
+    "ash_venting_overdrive_stat1": 1                        # Ship Movement Multiplier Default: 1
   },
   "ash_volatile_warheads": {
-    "missile_damage_mult": 0.20,                    # Default: 0.20
-    "missile_speed_mult": 0.10,                     # Default: 0.10
-    "missile_health_mult": 0.10                     # Default: 0.10
+    "ash_volatile_warheads_stat1": 0.20,                    # Missile Damage Multiplier Default: 0.20
+    "ash_volatile_warheads_stat2": 0.10,                    # Missile Health Multiplier Default: 0.10
+    "ash_volatile_warheads_stat3": 0.10                     # Missile Speed MultiplierDefault: 0.10
   }
 }
