Add new settings options for temporal flux reactor

--- a/data/config/hullmod_stats.ini
+++ b/data/config/hullmod_stats.ini
@@ -123,6 +123,7 @@
   },
   "ash_temporal_flux_reactor": {
     "ash_temporal_flux_reactor_stat1": 0.33                 # Timeflow Multiplier Default: 0.33
+    "ash_temporal_flux_reactor_stat2": 0.40                 # Peak Performance Time Multiplier Default: 0.40
   },
   "ash_venting_overdrive": {
     "ash_venting_overdrive_stat1": 1                        # Ship Movement Multiplier Default: 1
