Add ability to disable or enable hullmods that produce commodities

--- a/data/config/hullmod_stats.ini
+++ b/data/config/hullmod_stats.ini
@@ -122,7 +122,7 @@
     "ash_targeting_transceiver_stat4": 560                  # Maximum Effect Range Default: 560
   },
   "ash_temporal_flux_reactor": {
-    "ash_temporal_flux_reactor_stat1": 0.33                 # Timeflow Multiplier Default: 0.33
+    "ash_temporal_flux_reactor_stat1": 0.33,                 # Timeflow Multiplier Default: 0.33
     "ash_temporal_flux_reactor_stat2": 0.40                 # Peak Performance Time Multiplier Default: 0.40
   },
   "ash_venting_overdrive": {
