Add supplies recycler settings data

--- a/data/config/hullmod_stats.ini
+++ b/data/config/hullmod_stats.ini
@@ -111,6 +111,10 @@
     "ash_reactor_bay_stat3": 1,                             # Fighter Bay Modifier Default: 1
     "ash_reactor_bay_stat4": [1,1,2,2]                      # Deployment Points Modifier Default: [1,1,2,2]
   },
+  "ash_supplies_recycler": {
+    "ash_supplies_recycler_stat1": [0.01,0.02,0.03,0.05],   # Deployment Points Modifier Default: [0.01,0.02,0.03,0.05]
+    "ash_supplies_recycler_stat2": 0.40                     # Flux Dissipation Multiplier Default: 0.40
+  },
   "ash_swift_retreat_protocol": {
     "ash_swift_retreat_protocol_stat1": 0.25,               # Fighter Movement Multiplier Default: 0.25
     "ash_swift_retreat_protocol_stat2": 0.25                # Fighter Engine Damage Taken Multiplier Default: 0.25
