Add option to hide hullmods

--- a/data/config/hullmod_stats.ini
+++ b/data/config/hullmod_stats.ini
@@ -1,22 +1,27 @@
 {
   "ash_advance_radar_systems": {
+    "ash_advance_radar_systems_stat0": true,                        # Enabled Default: TRUE
     "ash_advance_radar_systems_stat1": 0.25,                        # Sight Radius Multiplier Default: 0.25
     "ash_advance_radar_systems_stat2": 0.05                         # Weapon Range Multiplier Default: 0.05
   },
   "ash_automated_racks": {
+    "ash_automated_racks_stat0" : True,                             # Enabled Default: TRUE
     "ash_automated_racks_stat1": 0.20,                              # Missile Fire Rate Multiplier Default: 0.20
     "ash_automated_racks_stat2": 0.10,                              # Missile Ammo Multiplier Default: 0.10
     "ash_automated_racks_stat3": 0.10                               # Missile Turn Rate Multiplier Default: 0.10
   },
   "ash_beam_combiners": {
+    "ash_beam_combiners_stat0" : True,                              # Enabled Default: TRUE
     "ash_beam_combiners_stat1": 0.20,                               # Beam Damage Multiplier Default: 0.20
     "ash_beam_combiners_stat2": 0.20                                # Beam Flux Cost Multiplier Default: 0.20
   },
   "ash_circuit_breakers": {
+    "ash_circuit_breakers_stat0" : True,                            # Enabled Default: TRUE
     "ash_circuit_breakers_stat1": 0.33,                             # Overload Duration Multiplier Default: 0.33
     "ash_circuit_breakers_stat2": 0.50                              # EMP Damage Taken Multiplier Default: 0.50
   },
   "ash_convicted_crewmates": {
+    "ash_convicted_crewmates_stat0" : True,                         # Enabled Default: TRUE
     "ash_convicted_crewmates_stat1": 2,                             # Frigate PPT Multiplier Default: 2
     "ash_convicted_crewmates_stat2": 1.5,                           # Destroyer PPT Multiplier Default: 1.5
     "ash_convicted_crewmates_stat3": 0.15,                          # Max Combat Readiness Modifier Default: 0.15
@@ -24,67 +29,80 @@
     "ash_convicted_crewmates_stat5": [5,10,15,25]                   # PPT Gain Default: [5,10,15,25]
   },
   "ash_external_cargo_holds": {
+    "ash_external_cargo_holds_stat0" : True,                        # Enabled Default: TRUE
     "ash_external_cargo_holds_stat1": 0.10,                         # Flux Dissipation Multiplier Default: 0.10
     "ash_external_cargo_holds_stat2": 0.10,                         # Sensor Profile Multiplier Default: 0.10
     "ash_external_cargo_holds_stat3": 0.10,                         # Armor Damage Taken Multiplier Default: 0.10
     "ash_external_cargo_holds_stat4": [60,120,180,300]              # Cargo Capacity Modifier Default: [60,120,180,300]
   },
   "ash_external_cryo_pods": {
+    "ash_external_cryo_pods_stat0" : True,                          # Enabled Default: TRUE
     "ash_external_cryo_pods_stat1": 0.10,                           # Flux Dissipation Multiplier Default: 0.10
     "ash_external_cryo_pods_stat2": 0.10,                           # Sensor Profile Multiplier Default: 0.10
     "ash_external_cryo_pods_stat3": 0.10,                           # Crew Lost Multiplier Default: 0.10
     "ash_external_cryo_pods_stat4": [60,120,180,300]                # Crew Capacity Modifier Default: [60,120,180,300]
   },
   "ash_external_fuel_tanks": {
+    "ash_external_fuel_tanks_stat0" : True,                         # Enabled Default: TRUE
     "ash_external_fuel_tanks_stat1": 0.10,                          # Flux Dissipation Multiplier Default: 0.10
     "ash_external_fuel_tanks_stat2": 0.10,                          # Sensor Profile Multiplier Default: 0.10
     "ash_external_fuel_tanks_stat3": 0.10,                          # High Explosive Damage Taken Multiplier Default: 0.10
     "ash_external_fuel_tanks_stat4": [60,120,180,300]               # Fuel Capacity Modifier Default: [60,120,180,300]
   },
   "ash_fighter_targeting_uplink": {
+    "ash_fighter_targeting_uplink_stat0" : True,                    # Enabled Default: TRUE
     "ash_fighter_targeting_uplink_stat1": 0.20,                     # Fighter Damage Multiplier Default: 0.20
     "ash_fighter_targeting_uplink_stat2": 760,                      # Minimum Effect Range Default: 760
     "ash_fighter_targeting_uplink_stat3": 560                       # Maximum Effect Range Default: 560
   },
   "ash_flux_amplifiers": {
+    "ash_flux_amplifiers_stat0" : True,                             # Enabled Default: TRUE
     "ash_flux_amplifiers_stat1": 0.20,                              # Weapon Damage Multiplier Default: 0.20
     "ash_flux_amplifiers_stat2": 0.10,                              # Weapon Flux Cost Multiplier Default: 0.10
     "ash_flux_amplifiers_stat3": 0.10                               # Weapon Fire Rate Multiplier Default: 0.10
   },
   "ash_flux_limiters": {
+    "ash_flux_limiters_stat0" : True,                               # Enabled Default: TRUE
     "ash_flux_limiters_stat1": 0.20,                                # Weapon Flux Cost Multiplier Default: 0.20
     "ash_flux_limiters_stat2": 0.10,                                # Weapon Damage Multiplier Default: 0.10
     "ash_flux_limiters_stat3": 0.10                                 # Weapon Fire Rate Multiplier Default: 0.10
   },
   "ash_front_loaded_armor": {
+    "ash_front_loaded_armor_stat0" : True,                          # Enabled Default: TRUE
     "ash_front_loaded_armor_stat1": 1.5,                            # Front Armor Value Multiplier Default: 1.5
     "ash_front_loaded_armor_stat2": 0.5                             # Back Armor Value Multiplier Default: 0.5
   },
   "ash_fuel_ramscoop": {
+    "ash_fuel_ramscoop_stat0" : True,                               # Enabled Default: TRUE
     "ash_fuel_ramscoop_stat1": 3,                                   # Days to Generate Fuel Default: 3
     "ash_fuel_ramscoop_stat2": [1,2,3,4],                           # Fuel to Generate Default: [1,2,3,4]
     "ash_fuel_ramscoop_stat3": [2,3,5,6]                            # S-mod Fuel to Generate Default: [2,3,5,6]
   },
   "ash_graviton_attunement_drive": {
+    "ash_graviton_attunement_drive_stat0" : True,                   # Enabled Default: TRUE
     "ash_graviton_attunement_drive_stat1": 2,                       # Supplies Per Month Multiplier Default: 2
     "ash_graviton_attunement_drive_stat2": 3,                       # Sensor Profile Multiplier Default: 3
     "ash_graviton_attunement_drive_stat3": [1,2,3,4]                # Fleet Burn Modifier Default: [1,2,3,4]
   },
   "ash_industrial_machine_forge": {
+    "ash_industrial_machine_forge_stat0" : True,                    # Enabled Default: TRUE
     "ash_industrial_machine_forge_stat1": 3,                        # Days to Generate Heavy Machinery Default: 3
     "ash_industrial_machine_forge_stat2": [5,15,30,50],             # Heavy Machinery to Generate Default: [5,15,30,50]
     "ash_industrial_machine_forge_stat3": [35,105,210,350]          # Metals to Consume Default: [35,105,210,350]
   },
   "ash_invasion_package": {
+    "ash_invasion_package_stat0" : True,                            # Enabled Default: TRUE
     "ash_invasion_package_stat1": [0.02,0.04,0.06,0.10],            # Planetary Operations Marine Casualties Multiplier Default: [0.02,0.04,0.06,0.10]
     "ash_invasion_package_stat2": [0.02,0.04,0.06,0.10],            # Planetary Operations Multiplier Default: [0.02,0.04,0.06,0.10]
     "ash_invasion_package_stat3": 0.40                              # Cargo Capacity Multiplier Default: 0.40
   },
   "ash_makeshift_missile_autoforge": {
+    "ash_makeshift_missile_autoforge_stat0" : True,                 # Enabled Default: TRUE
     "ash_makeshift_missile_autoforge_stat1": 10,                    # Missile Ammo Reload Size Modifier Default: 10
     "ash_makeshift_missile_autoforge_stat2": 50                     # Missile Reload Per Second Modifier Default: 50
   },
   "ash_marine_training_facility": {
+    "ash_marine_training_facility_stat0" : True,                    # Enabled Default: TRUE
     "ash_marine_training_facility_stat1": 7,                        # Days to Generate Marines Default: 7
     "ash_marine_training_facility_stat2": [10,20,30,50],            # Marines to Generate Default: [10,20,30,50]
     "ash_marine_training_facility_stat3": [2,4,6,10],               # Marines to Level Default: [2,4,6,10]
@@ -92,50 +110,61 @@
     "ash_marine_training_facility_stat5": [50,100,150,250]          # Max Marines to Generate Default: [50,100,150,250]
   },
   "ash_mineral_refinery": {
+    "ash_mineral_refinery_stat0" : True,                            # Enabled Default: TRUE
     "ash_mineral_refinery_stat1": 3,                                # Days to Generate Metals/Rare Metals Default: 3
     "ash_mineral_refinery_stat2": [80,160,240,400],                 # Metals/Rare Metals to Generate Default: [80,160,240,400]
     "ash_mineral_refinery_stat3": [400,800,1200,2000]               # Ore/Rare Ore to Consume Default: [400,800,1200,2000]
   },
   "ash_missile_bay": {
+    "ash_missile_bay_stat0" : True,                                 # Enabled Default: TRUE
     "ash_missile_bay_stat1": 0.60,                                  # Missile Ammo Multiplier Default: 0.60
     "ash_missile_bay_stat2": 1,                                     # Fighter Bay Modifier Default: 1
     "ash_missile_bay_stat3": [1,1,2,2]                              # Deployment Points Modifier Default: [1,1,2,2]
   },
   "ash_reactive_subsystems": {
+    "ash_reactive_subsystems_stat0" : True,                         # Enabled Default: TRUE
     "ash_reactive_subsystems_stat1": 0.15,                          # Max Combat Readiness Modifier Default: 0.15
     "ash_reactive_subsystems_stat2": [1,2,3,5]                      # Deployment Points Modifier Default: [1,2,3,5]
   },
   "ash_reactor_bay": {
+    "ash_reactor_bay_stat0" : True,                                 # Enabled Default: TRUE
     "ash_reactor_bay_stat1": 0.10,                                  # Flux Dissipation Multiplier Default: 0.10
     "ash_reactor_bay_stat2": 0.10,                                  # Flux Capacity Multiplier Default: 0.10
     "ash_reactor_bay_stat3": 1,                                     # Fighter Bay Modifier Default: 1
     "ash_reactor_bay_stat4": [1,1,2,2]                              # Deployment Points Modifier Default: [1,1,2,2]
   },
   "ash_streamlined_bubble_drive": {
+    "ash_streamlined_bubble_drive_stat0" : True,                    # Enabled Default: TRUE
     "ash_streamlined_bubble_drive_stat1": [0.04,0.08,0.12,0.20],    # Flux Dissipation Multiplier Default: [0.04,0.08,0.12,0.20]
   },
   "ash_supplies_recycler": {
+    "ash_supplies_recycler_stat0" : True,                           # Enabled Default: TRUE
     "ash_supplies_recycler_stat1": [0.01,0.02,0.03,0.05],           # Deployment Points Modifier Default: [0.01,0.02,0.03,0.05]
     "ash_supplies_recycler_stat2": 0.40                             # Flux Dissipation Multiplier Default: 0.40
   },
   "ash_swift_retreat_protocol": {
+    "ash_swift_retreat_protocol_stat0" : True,                      # Enabled Default: TRUE
     "ash_swift_retreat_protocol_stat1": 0.25,                       # Fighter Movement Multiplier Default: 0.25
     "ash_swift_retreat_protocol_stat2": 0.25                        # Fighter Engine Damage Taken Multiplier Default: 0.25
   },
   "ash_targeting_transceiver": {
+    "ash_targeting_transceiver_stat0" : True,                       # Enabled Default: TRUE
     "ash_targeting_transceiver_stat1": 0.10,                        # Frigate/Destroyer Weapon Range Multiplier Default: 0.10
     "ash_targeting_transceiver_stat2": 0.40,                        # Cruiser/Capital Autofire Accuracy Multiplier Default: 0.40
     "ash_targeting_transceiver_stat3": 760,                         # Minimum Effect Range Default: 760
     "ash_targeting_transceiver_stat4": 560                          # Maximum Effect Range Default: 560
   },
   "ash_temporal_flux_reactor": {
+    "ash_temporal_flux_reactor_stat0" : True,                       # Enabled Default: TRUE
     "ash_temporal_flux_reactor_stat1": 0.33,                        # Timeflow Multiplier Default: 0.33
     "ash_temporal_flux_reactor_stat2": 0.40                         # Peak Performance Time Multiplier Default: 0.40
   },
   "ash_venting_overdrive": {
+    "ash_venting_overdrive_stat0" : True,                           # Enabled Default: TRUE
     "ash_venting_overdrive_stat1": 1                                # Ship Movement Multiplier Default: 1
   },
   "ash_volatile_warheads": {
+    "ash_volatile_warheads_stat0" : True,                           # Enabled Default: TRUE
     "ash_volatile_warheads_stat1": 0.20,                            # Missile Damage Multiplier Default: 0.20
     "ash_volatile_warheads_stat2": 0.10,                            # Missile Health Multiplier Default: 0.10
     "ash_volatile_warheads_stat3": 0.10                             # Missile Speed MultiplierDefault: 0.10
